Re-enabled GLaDoS and changed text on background to white

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
    <!-- Other Routines -->
    <script type="text/javascript" src="distrib/utils.js"></script>
    <!-- Uncomment the line below to enable GLaDOS testing. -->
-   <!-- <script type="text/javascript" src="http://alanclasses.github.io/TSOS/test/glados-ip0.js"></script> -->
+    <script type="text/javascript" src="http://alanclasses.github.io/TSOS/test/glados-ip0.js"></script> 
    
 </head>
 
@@ -75,7 +75,7 @@
       </canvas>
    </div>
 
-   <div id="divLog" style="margin-left:520px;">
+   <div id="divLog" style="margin-left:520px; color:white">
       <label>
          Host Log
          <br>
@@ -87,7 +87,7 @@
       </label>
    </div>
 
-   <div id="divUserProgramInput" style="margin-left:520px;">
+   <div id="divUserProgramInput" style="margin-left:520px; color:white">
       <label>
          User Program Input
          <br>
@@ -100,7 +100,7 @@
    </div>
 </div>
 
-<p class="footerText" style="clear:both;">
+<p class="footerText" style="clear:both; color:white">
    <br>
    Copyright &copy; 2008 - 2016 No Rights Reserved.
    <br>
