Added implementation of task bar. Tackles issue #3.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
 
 <div id="divMain" style="width:100%;">
 
+   <div id="divTaskBar">
+      <nav id="taskBar">
+        <h2>&nbsp;</h2>
+      </nav>
+   </div>
+
    <div id="divButtonBar" style="margin:4px;">
       <input type="button"
              id = "btnStartOS"
