Added some quality of life fixes. Put title of OS at top of page. Fixed comments, added more verbose description for ver. Fixes issue #1

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
 
 <body onload="onDocumentLoad()">
 
+<div id="header">
+  <h1 style="color: white">KaiOS</h1>
+</div>
+
 <div id="divMain" style="width:100%;">
 
    <div id="divTaskBar">
