Added html elements for memory, PCB, and CPU displays

--- a/index.html
+++ b/index.html
@@ -97,6 +97,59 @@
       </label>
    </div>
 
+   <div id="divMemory" style="margin-left:520px; color: white">
+      <label>
+         Memory
+         <br>
+         <table name="tableMemory"
+                id  ="tableMemory">
+         </table>
+      </label>
+   </div>
+
+   <div id="divPCB" style="margin-left:520px; color: white">
+      <label>
+         PCB
+         <br>
+         <table name="tablePCB"
+                id  ="tablePCB">
+            <thead>
+              <tr>
+                <td>PID</td>
+                <td>State</td>
+                <td>Swapped</td>
+                <td>PC</td>
+                <td>IR</td>
+                <td>Acc</td>
+                <td>X</td>
+                <td>Y</td>
+                <td>Z</td>
+              </tr>
+            </thead>
+         </table>
+      </label>
+   </div>
+
+   <div id="divCPU" style="margin-left:520px; color: white">
+      <label>
+         CPU
+         <br>
+         <table name="tableCPU"
+                id  ="tableCPU">
+            <thead>
+              <tr>
+                <td>PC</td>
+                <td>IR</td>
+                <td>Acc</td>
+                <td>X</td>
+                <td>Y</td>
+                <td>ZF</td>
+              </tr>
+            </thead>
+         </table>
+      </label>
+   </div>
+
    <div id="divUserProgramInput" style="margin-left:520px; color:white">
       <label>
          User Program Input
