Memory is now instantiated, with array of size 768. Also fixed tables not displaying properly as white. Tackles issue #18, #14.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
    <!-- Other Routines -->
    <script type="text/javascript" src="distrib/utils.js"></script>
    <!-- Uncomment the line below to enable GLaDOS testing. -->
-   <script type="text/javascript" src="http://alanclasses.github.io/TSOS/test/glados-ip1.js"></script>  
+   <!-- <script type="text/javascript" src="http://alanclasses.github.io/TSOS/test/glados-ip1.js"></script>   -->
    
 </head>
 
@@ -101,8 +101,10 @@
       <label>
          Memory
          <br>
-         <table name="tableMemory"
-                id  ="tableMemory">
+         <table name    ="tableMemory"
+                id      ="tableMemory"
+                bgcolor ="white"
+                style   ="color: black">
          </table>
       </label>
    </div>
@@ -111,8 +113,10 @@
       <label>
          PCB
          <br>
-         <table name="tablePCB"
-                id  ="tablePCB">
+         <table name    ="tablePCB"
+                id      ="tablePCB"
+                bgcolor ="white"
+                style   ="color: black">
             <thead>
               <tr>
                 <td>PID</td>
@@ -134,8 +138,10 @@
       <label>
          CPU
          <br>
-         <table name="tableCPU"
-                id  ="tableCPU">
+         <table name    ="tableCPU"
+                id      ="tableCPU"
+                bgcolor ="white"
+                style   ="color: black">
             <thead>
               <tr>
                 <td>PC</td>
