Created Ready queue. Implemented run command. Added memory manager. Memory and memory display now populated. Tackles issue #18, #17, #13, #11, #12

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
    <script type="text/javascript" src="distrib/host/control.js"></script>
    <script type="text/javascript" src="distrib/host/devices.js"></script>
    <script type="text/javascript" src="distrib/host/cpu.js"></script>
+   <script type="text/javascript" src="distrib/host/memory.js"></script>
 
    <!-- Virtual OS Routines: Make sure Kernel code is last, since it needs those above it. -->
    <script type="text/javascript" src="distrib/os/interrupt.js"></script>
@@ -27,6 +28,8 @@
    <script type="text/javascript" src="distrib/os/shellCommand.js"></script>
    <script type="text/javascript" src="distrib/os/userCommand.js"></script>
    <script type="text/javascript" src="distrib/os/kernel.js"></script>
+   <script type="text/javascript" src="distrib/os/processControlBlock.js"></script>
+   <script type="text/javascript" src="distrib/os/memoryManager.js"></script>
 
    <!-- Other Routines -->
    <script type="text/javascript" src="distrib/utils.js"></script>
@@ -96,15 +99,14 @@
          ></textarea>
       </label>
    </div>
-
-   <div id="divMemory" style="margin-left:520px; color: white">
+   <div id="divMemory" style="margin-left:520px; color: white;">
       <label>
          Memory
          <br>
          <table name    ="tableMemory"
                 id      ="tableMemory"
                 bgcolor ="white"
-                style   ="color: black">
+                style   ="color: black; height: 100px; overflow-y: scroll; display: block; width: 350px;">
          </table>
       </label>
    </div>
@@ -164,7 +166,7 @@
                    id  ="taProgramInput"
                    rows="8"
                    cols="48"
-         ></textarea>
+         >A9 B2</textarea>
       </label>
    </div>
 </div>
