CPU now updated and displays its values. Implemented A9 opcode. Tackles issue #13, #14, #19

--- a/index.html
+++ b/index.html
@@ -154,6 +154,16 @@
                 <td>ZF</td>
               </tr>
             </thead>
+            <tbody>
+              <tr>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+              </tr>
+            </tbody>
          </table>
       </label>
    </div>
