Memory now updates its display properly (#13, #14). Implemented 8D opcode (#13)

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                    id  ="taProgramInput"
                    rows="8"
                    cols="48"
-         >A9 B2</textarea>
+         >A9 03 8D 00 00 A9 04 6D 00 00 8D 01 00 A2 01 AC 01 00 EA 00</textarea>
       </label>
    </div>
 </div>
