Changed background image. Fixed spacing in table for PCB and CPU display (#13, #14)

--- a/index.html
+++ b/index.html
@@ -122,14 +122,13 @@
             <thead>
               <tr>
                 <td>PID</td>
-                <td>State</td>
-                <td>Swapped</td>
-                <td>PC</td>
-                <td>IR</td>
-                <td>Acc</td>
-                <td>X</td>
-                <td>Y</td>
-                <td>Z</td>
+                <td style="text-align: center; width: 80px">State</td>
+                <td style="text-align: center; width: 40px">PC</td>
+                <td style="text-align: center; width: 25px">IR</td>
+                <td style="text-align: center; width: 25px">Acc</td>
+                <td style="text-align: center; width: 25px">X</td>
+                <td style="text-align: center; width: 25px">Y</td>
+                <td style="text-align: center; width: 25px">Z</td>
               </tr>
             </thead>
          </table>
