--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
       </label>
    </div>
 
-   <div id="divPCB" style="margin-left:520px; color: white">
+   <div id="divReady" style="margin-left:520px; color: white">
       <label>
-         PCB
+         Ready Queue Display
          <br>
-         <table name    ="tablePCB"
-                id      ="tablePCB"
+         <table name    ="tableReady"
+                id      ="tableReady"
                 bgcolor ="white"
                 style   ="color: black">
             <thead>
@@ -176,7 +176,7 @@
                    id  ="taProgramInput"
                    rows="8"
                    cols="48"
-         >A9 03 8D 00 00 A9 04 6D 00 00 8D 01 00 A2 01 AC 01 00 EA 00</textarea>
+         >A9 03 8D 41 00 A9 01 8D 40 00 AC 40 00 A2 01 FF EE 40 00 AE 40 00 EC 41 00 D0 EF A9 44 8D 42 00 A9 4F 8D 43 00 A9 4E 8D 44 00 A9 45 8D 45 00 A9 00 8D 46 00 A2 02 A0 42 FF 00</textarea>
       </label>
    </div>
 </div>
