Implemented single step mode (#15).

--- a/index.html
+++ b/index.html
@@ -79,6 +79,23 @@
              value="Reset"
              tabindex="2"
              onclick="TSOS.Control.hostBtnReset_click(this);">
+
+      <input type="button"
+             id = "btnSingleStep"
+             name="btnSingleStep"
+             class="normal_button"
+             disabled="disabled"
+             value="Single Step"
+             tabindex="2"
+             onclick="TSOS.Control.hostBtnSingleStep_click(this);">
+      <input type="button"
+             id = "btnNextStep"
+             name="btnNextStep"
+             class="normal_button"
+             disabled="disabled"
+             value=">"
+             tabindex="2"
+             onclick="TSOS.Control.hostBtnNextStep_click(this);">
    </div>
 
    <div id="divConsole" style="margin:4px; width:500px; height:500px; float:left;">
