--- a/index.html
+++ b/index.html
@@ -1,210 +1,222 @@
 <!DOCTYPE HTML>
 <html>
-<head>
-   <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-   <meta name="author"             content="Alan G. Labouseur" />
-   <link rel="stylesheet" href="tsos.css" type="text/css" media="screen" />
-   <title>
-      KaiOS - a browser-based virtual Operating System in TypeScript
-   </title>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+		<!--<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">-->
+		<meta name="author"             content="Alan G. Labouseur" />
+		<link rel="stylesheet" href="tsos.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="bootstrap.css" type="text/css" />
+		<title>
+		KaiOS - a browser-based virtual Operating System in TypeScript
+		</title>
 
-   <!-- Globals CONSTANTS and _Variables. Must included be first. -->
-   <script type="text/javascript" src="distrib/globals.js"></script>
+		<!-- Globals CONSTANTS and _Variables. Must included be first. -->
+		<script type="text/javascript" src="distrib/globals.js"></script>
 
-   <!-- Host (Virtual Machine / Hardware Simulation) Routines -->
-   <script type="text/javascript" src="distrib/host/control.js"></script>
-   <script type="text/javascript" src="distrib/host/devices.js"></script>
-   <script type="text/javascript" src="distrib/host/cpu.js"></script>
-   <script type="text/javascript" src="distrib/host/memory.js"></script>
+		<!-- Host (Virtual Machine / Hardware Simulation) Routines -->
+		<script type="text/javascript" src="distrib/host/control.js"></script>
+		<script type="text/javascript" src="distrib/host/devices.js"></script>
+		<script type="text/javascript" src="distrib/host/cpu.js"></script>
+		<script type="text/javascript" src="distrib/host/memory.js"></script>
 
-   <!-- Virtual OS Routines: Make sure Kernel code is last, since it needs those above it. -->
-   <script type="text/javascript" src="distrib/os/interrupt.js"></script>
-   <script type="text/javascript" src="distrib/os/canvastext.js"></script>
-   <script type="text/javascript" src="distrib/os/console.js"></script>
-   <script type="text/javascript" src="distrib/os/deviceDriver.js"></script>
-   <script type="text/javascript" src="distrib/os/deviceDriverKeyboard.js"></script>
-   <script type="text/javascript" src="distrib/os/queue.js"></script>
-   <script type="text/javascript" src="distrib/os/shell.js"></script>
-   <script type="text/javascript" src="distrib/os/shellCommand.js"></script>
-   <script type="text/javascript" src="distrib/os/userCommand.js"></script>
-   <script type="text/javascript" src="distrib/os/kernel.js"></script>
-   <script type="text/javascript" src="distrib/os/processControlBlock.js"></script>
-   <script type="text/javascript" src="distrib/os/memoryManager.js"></script>
-   <script type="text/javascript" src="distrib/os/processManager.js"></script>
+		<!-- Virtual OS Routines: Make sure Kernel code is last, since it needs those above it. -->
+		<script type="text/javascript" src="distrib/os/interrupt.js"></script>
+		<script type="text/javascript" src="distrib/os/canvastext.js"></script>
+		<script type="text/javascript" src="distrib/os/console.js"></script>
+		<script type="text/javascript" src="distrib/os/deviceDriver.js"></script>
+		<script type="text/javascript" src="distrib/os/deviceDriverKeyboard.js"></script>
+		<script type="text/javascript" src="distrib/os/queue.js"></script>
+		<script type="text/javascript" src="distrib/os/shell.js"></script>
+		<script type="text/javascript" src="distrib/os/shellCommand.js"></script>
+		<script type="text/javascript" src="distrib/os/userCommand.js"></script>
+		<script type="text/javascript" src="distrib/os/kernel.js"></script>
+		<script type="text/javascript" src="distrib/os/processControlBlock.js"></script>
+		<script type="text/javascript" src="distrib/os/memoryManager.js"></script>
+		<script type="text/javascript" src="distrib/os/processManager.js"></script>
 
-   <!-- Other Routines -->
-   <script type="text/javascript" src="distrib/utils.js"></script>
-   <!-- Uncomment the line below to enable GLaDOS testing. -->
-   <!-- <script type="text/javascript" src="http://alanclasses.github.io/TSOS/test/glados-ip1.js"></script>   -->
-   
-</head>
+		<!-- Other Routines -->
+		<script type="text/javascript" src="distrib/utils.js"></script>
+		<script type="text/javascript" src="jquery-3.2.1.min.js"></script>
+		<script type="text/javascript" src="bootstrap.js"></script>
+		<!-- Uncomment the line below to enable GLaDOS testing. -->
+		<!-- <script type="text/javascript" src="http://alanclasses.github.io/TSOS/test/glados-ip1.js"></script>   -->
 
-<body onload="onDocumentLoad()">
+	</head>
 
-<div id="header">
-  <h1 style="color: white">KaiOS</h1>
-</div>
+	<body onload="onDocumentLoad()">
+		<div class="container-fluid">
+		<div id="header">
+			<h1 class="display-1 text-center">KaiOS</h1>
+		</div>
+		<div class="container-fluid">
+			<div class="row">
+				<div id="divButtonBar" class="col-md-3" style="min-width: 400px;">
+					<input type="button"
+					id = "btnStartOS"
+					name="brnStartOS"
+					class="btn btn-success"
+					value="Start"
+					tabindex="0"
+					onclick="TSOS.Control.hostBtnStartOS_click(this);">
 
-<div id="divMain" style="width:100%;">
+					<input type="button"
+					id = "btnHaltOS"
+					name="brnHaltOS"
+					class="btn btn-danger"
+					disabled="disabled"
+					value="Halt"
+					tabindex="1"
+					onclick="TSOS.Control.hostBtnHaltOS_click(this);">
 
-   <div id="divTaskBar">
-      <nav id="taskBar">
-        <h2>&nbsp;</h2>
-      </nav>
-   </div>
+					<input type="button"
+					id = "btnReset"
+					name="brnReset"
+					class="btn btn-warning"
+					disabled="disabled"
+					value="Reset"
+					tabindex="2"
+					onclick="TSOS.Control.hostBtnReset_click(this);">
 
-   <div id="divButtonBar" style="margin:4px;">
-      <input type="button"
-             id = "btnStartOS"
-             name="brnStartOS"
-             class="normal_button"
-             value="Start"
-             tabindex="0"
-             onclick="TSOS.Control.hostBtnStartOS_click(this);">
-
-      <input type="button"
-             id = "btnHaltOS"
-             name="brnHaltOS"
-             class="normal_button"
-             disabled="disabled"
-             value="Halt"
-             tabindex="1"
-             onclick="TSOS.Control.hostBtnHaltOS_click(this);">
-
-      <input type="button"
-             id = "btnReset"
-             name="brnReset"
-             class="normal_button"
-             disabled="disabled"
-             value="Reset"
-             tabindex="2"
-             onclick="TSOS.Control.hostBtnReset_click(this);">
-
-      <input type="button"
-             id = "btnSingleStep"
-             name="btnSingleStep"
-             class="normal_button"
-             disabled="disabled"
-             value="Single Step"
-             tabindex="2"
-             onclick="TSOS.Control.hostBtnSingleStep_click(this);">
-      <input type="button"
-             id = "btnNextStep"
-             name="btnNextStep"
-             class="normal_button"
-             disabled="disabled"
-             value=">"
-             tabindex="2"
-             onclick="TSOS.Control.hostBtnNextStep_click(this);">
-   </div>
-
-   <div id="divConsole" style="margin:4px; width:500px; height:500px; float:left;">
-      <canvas id="display"
-              width="500px"
-              height="500px"
-              tabindex="3">
-      </canvas>
-   </div>
-
-   <div id="divLog" style="margin-left:520px; color:white">
-      <label>
-         Host Log
-         <br>
-         <textarea name="taHostLog"
-                   id  ="taHostLog"
-                   rows="26"
-                   cols="48"
-         ></textarea>
-      </label>
-   </div>
-   <div id="divMemory" style="margin-left:520px; color: white;">
-      <label>
-         Memory
-         <br>
-         <table name    ="tableMemory"
-                id      ="tableMemory"
-                bgcolor ="white"
-                style   ="color: black; height: 100px; overflow-y: scroll; display: block; width: 360px;">
-         </table>
-      </label>
-   </div>
-
-   <div id="divReady" style="margin-left:520px; color: white">
-      <label>
-         Ready Queue Display
-         <br>
-         <table name    ="tableReady"
-                id      ="tableReady"
-                bgcolor ="white"
-                style   ="color: black">
-            <thead>
-              <tr>
-                <td>PID</td>
-                <td style="text-align: center; width: 80px">State</td>
-                <td style="text-align: center; width: 40px">PC</td>
-                <td style="text-align: center; width: 25px">IR</td>
-                <td style="text-align: center; width: 25px">Acc</td>
-                <td style="text-align: center; width: 25px">X</td>
-                <td style="text-align: center; width: 25px">Y</td>
-                <td style="text-align: center; width: 25px">Z</td>
-              </tr>
-            </thead>
-         </table>
-      </label>
-   </div>
-
-   <div id="divCPU" style="margin-left:520px; color: white">
-      <label>
-         CPU
-         <br>
-         <table name    ="tableCPU"
-                id      ="tableCPU"
-                bgcolor ="white"
-                style   ="color: black">
-            <thead>
-              <tr>
-                <td>PC</td>
-                <td>IR</td>
-                <td>Acc</td>
-                <td>X</td>
-                <td>Y</td>
-                <td>ZF</td>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-              </tr>
-            </tbody>
-         </table>
-      </label>
-   </div>
-
-   <div id="divUserProgramInput" style="margin-left:520px; color:white">
-      <label>
-         User Program Input
-         <br>
-         <textarea name="taProgramInput"
-                   id  ="taProgramInput"
-                   rows="8"
-                   cols="48"
-         >A9 03 8D 41 00 A9 01 8D 40 00 AC 40 00 A2 01 FF EE 40 00 AE 40 00 EC 41 00 D0 EF A9 44 8D 42 00 A9 4F 8D 43 00 A9 4E 8D 44 00 A9 45 8D 45 00 A9 00 8D 46 00 A2 02 A0 42 FF 00</textarea>
-      </label>
-   </div>
-</div>
-
-<p class="footerText" style="clear:both; color:white">
-   <br>
-   Copyright &copy; 2008 - 2016 No Rights Reserved.
-   <br>
-   Reproduction is inhibited without the express written consent of
-   Ted Codd, Stevie Ray Vaughan, and Ian Fleming.
-</p>
-
-</body>
+					<input type="button"
+					id = "btnSingleStep"
+					name="btnSingleStep"
+					class="btn btn-primary"
+					disabled="disabled"
+					value="Single Step"
+					tabindex="2"
+					onclick="TSOS.Control.hostBtnSingleStep_click(this);">
+					<input type="button"
+					id = "btnNextStep"
+					name="btnNextStep"
+					class="btn"
+					disabled="disabled"
+					value=">"
+					tabindex="2"
+					onclick="TSOS.Control.hostBtnNextStep_click(this);">
+				</div>
+				<div id="divTaskBar" class="col-md-8">
+					<nav id="taskBar">
+						<h2>&nbsp;</h2>
+					</nav>
+				</div>
+			</div>
+		</div>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-md-3" style="min-width: 400px;">
+					<div id="divCPU" class="panel text-center">
+						<label>
+							CPU
+							<br>
+							<table name    ="tableCPU"
+								   id      ="tableCPU"
+								   bgcolor ="white"
+								   style   ="color: black"
+								   class   ="table table-bordered">
+								<thead>
+									<tr>
+										<td>PC</td>
+										<td>IR</td>
+										<td>Acc</td>
+										<td>X</td>
+										<td>Y</td>
+										<td>ZF</td>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td>0</td>
+										<td>0</td>
+										<td>0</td>
+										<td>0</td>
+										<td>0</td>
+										<td>0</td>
+									</tr>
+								</tbody>
+							</table>
+						</label>
+					</div>
+					<br>
+					<div id="divMemory" class="panel text-center">
+						<label class="text-center">
+							Memory
+							<br>
+							<table name    ="tableMemory"
+								   id      ="tableMemory"
+								   bgcolor ="white"
+								   style   ="color: black; height: 100px; overflow-y: scroll; display: block; width: 100%; min-width: 300px;"
+								   class   ="table table-bordered table-striped table-sm">
+							</table>
+						</label>
+					</div>
+					<br>
+					<div id="divUserProgramInput" class="panel text-center">
+						<label>
+							User Program Input
+							<br>
+							<textarea name="taProgramInput"
+							id  ="taProgramInput"
+							rows="8"
+							cols="48"
+							>A9 03 8D 41 00 A9 01 8D 40 00 AC 40 00 A2 01 FF EE 40 00 AE 40 00 EC 41 00 D0 EF A9 44 8D 42 00 A9 4F 8D 43 00 A9 4E 8D 44 00 A9 45 8D 45 00 A9 00 8D 46 00 A2 02 A0 42 FF 00</textarea>
+						</label>
+					</div>
+				</div>
+				<div id="divConsole" class="col-md-5 text-center" style="min-width: 540px; max-width: 540px;">
+					<canvas id="display"
+					width="500px"
+					height="500px"
+					tabindex="3"
+					style="margin-top:25px;">
+					</canvas>
+				</div>
+				<div class="col-md-4">
+					<div id="divLog" class="panel text-center" style="min-width: 450px;">
+						<label class="text-center">
+							Host Log
+							<br>
+							<textarea name="taHostLog"
+							id  ="taHostLog"
+							rows="15"
+							cols="48"
+							></textarea>
+						</label>
+					</div>
+					<br>
+					<div id="divReady" class="panel text-center">
+						<label>
+							Ready Queue Display
+							<br>
+							<table name    ="tableReady"
+								   id      ="tableReady"
+								   bgcolor ="white"
+								   style   ="color: black"
+								   class   ="table table-bordered">
+								<thead>
+									<tr>
+									<td>PID</td>
+									<td style="text-align: center; width: 80px">State</td>
+									<td style="text-align: center; width: 40px">PC</td>
+									<td style="text-align: center; width: 25px">IR</td>
+									<td style="text-align: center; width: 25px">Acc</td>
+									<td style="text-align: center; width: 25px">X</td>
+									<td style="text-align: center; width: 25px">Y</td>
+									<td style="text-align: center; width: 25px">Z</td>
+									</tr>
+								</thead>
+							</table>
+						</label>
+					</div>
+				</div>
+			</div>
+		</div>
+		<p class="footerText" style="clear:both;">
+		<br>
+		Copyright &copy; 2008 - 2016 No Rights Reserved.
+		<br>
+		Reproduction is inhibited without the express written consent of
+		Ted Codd, Stevie Ray Vaughan, and Ian Fleming.
+		</p>
+	</div>
+	</body>
 </html>
