--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 							tabindex="2"
 							onclick="TSOS.Control.hostBtnNextStep_click(this);">
 						</div>
-						<div id="divTaskBar" class="col-md-8">
+						<div id="divTaskBar">
 							<nav id="taskBar">
 								<h2>&nbsp;</h2>
 							</nav>
@@ -107,8 +107,7 @@
 						<div class="col-md-3" style="min-width: 400px;">
 							<div id="divCPU" class="panel text-center">
 								<label>
-									CPU
-									<br>
+									<div class="label-header">CPU</div>
 									<table name    ="tableCPU"
 										id      ="tableCPU"
 										bgcolor ="white"
@@ -140,8 +139,7 @@
 							<br>
 							<div id="divMemory" class="panel text-center">
 								<label class="text-center">
-									Memory
-									<br>
+									<div class="label-header">Memory</div>
 									<table name    ="tableMemory"
 										id      ="tableMemory"
 										bgcolor ="white"
@@ -153,8 +151,7 @@
 							<br>
 							<div id="divUserProgramInput" class="panel text-center">
 								<label>
-									User Program Input
-									<br>
+									<div class="label-header">User Program Input</div>
 									<textarea name="taProgramInput"
 									id  ="taProgramInput"
 									rows="8"
@@ -178,8 +175,7 @@
 						<div class="col-md-3" style="min-width: 450px;">
 							<div id="divLog" class="panel text-center" style="min-width: 450px;">
 								<label class="text-center">
-									Host Log
-									<br>
+									<div class="label-header">Host Log</div>
 									<textarea name="taHostLog"
 									id  ="taHostLog"
 									rows="15"
@@ -190,8 +186,7 @@
 							<br>
 							<div id="divReady" class="panel text-center">
 								<label>
-									Ready Queue Display
-									<br>
+									<div class="label-header">Ready Queue Display</div>
 									<table name    ="tableReady"
 										id      ="tableReady"
 										bgcolor ="white"
@@ -212,6 +207,11 @@
 									</table>
 								</label>
 							</div>
+							<br>
+							<div id="beautiful" class="panel">
+								<div class="panel-header">Sexy Display</div>
+								<div id="sexy">&nbsp;</div>
+							</div>	
 						</div>
 					</div>
 				</div>
