Background now rotates! Also, made an addition to my sexy picture.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 		<script type="text/javascript" src="bootstrap.js"></script>
 		<!-- Uncomment the line below to enable GLaDOS testing. -->
 		<!-- <script type="text/javascript" src="http://alanclasses.github.io/TSOS/test/glados-ip1.js"></script>   -->
+		<link rel="stylesheet" type="text.css" alt="placeholder for rotate" />
 
 	</head>
 
@@ -48,7 +49,7 @@
 			<div id="header">
 				<h1 class="display-1 text-center">KaiOS</h1>
 			</div>
-			<div class="background">
+			<div class="background" id="background">
 				<div class="container-fluid">
 					<div class="row">
 						<div id="divButtonBar" class="col-md-3" style="min-width: 400px;">
