--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 		<script type="text/javascript" src="distrib/os/memoryManager.js"></script>
 		<script type="text/javascript" src="distrib/os/processManager.js"></script>
 		<script type="text/javascript" src="distrib/host/memoryAccessor.js"></script>
+		<script type="text/javascript" src="distrib/os/scheduler.js"></script>
 
 		<!-- Other Routines -->
 		<script type="text/javascript" src="distrib/utils.js"></script>
