Added separate interrupts for bounds and invalid op code errors

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 							<br>
 							<div id="divReady" class="panel text-center">
 								<label>
-									<div class="label-header">Ready Queue Display</div>
+									<div class="label-header">Ready Queue Display<br><small>Round Robin</small></div>
 									<table name    ="tableReady"
 										id      ="tableReady"
 										bgcolor ="white"
