Added placeholder disk and disk driver, and added placeholder disk driver operations. (#28, #29, #30, #31)

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 		<script type="text/javascript" src="distrib/host/devices.js"></script>
 		<script type="text/javascript" src="distrib/host/cpu.js"></script>
 		<script type="text/javascript" src="distrib/host/memory.js"></script>
+		<script type="text/javascript" src="distrib/host/memoryAccessor.js"></script>
+		<script type="text/javascript" src="distrib/host/disk.js"></script>
 
 		<!-- Virtual OS Routines: Make sure Kernel code is last, since it needs those above it. -->
 		<script type="text/javascript" src="distrib/os/interrupt.js"></script>
@@ -33,7 +35,6 @@
 		<script type="text/javascript" src="distrib/os/processControlBlock.js"></script>
 		<script type="text/javascript" src="distrib/os/memoryManager.js"></script>
 		<script type="text/javascript" src="distrib/os/processManager.js"></script>
-		<script type="text/javascript" src="distrib/host/memoryAccessor.js"></script>
 		<script type="text/javascript" src="distrib/os/scheduler.js"></script>
 
 		<!-- Other Routines -->
