--- a/index.html
+++ b/index.html
@@ -164,6 +164,18 @@
 								</label>
 							</div>
 							<br>
+							<div id="divDisk" class="panel text-center">
+								<label class="text-center">
+									<div class="label-header">Disk</div>
+									<table name    ="tableDisk"
+										id      ="tableDisk"
+										bgcolor ="white"
+										style   ="color: black; height: 100px; overflow-y: scroll; display: block; width: 100%; min-width: 800px;"
+										class   ="table table-bordered table-striped table-sm">
+									</table>
+								</label>
+							</div>
+							<br>
 						</div>
 						<div class="col-md-5" style="width: 575px; max-width: 575px; min-width: 575px;">
 							<div id="divConsole" class="panel text-center" style="min-width: 540px; max-width: 540px;">
