--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		<script type="text/javascript" src="distrib/os/console.js"></script>
 		<script type="text/javascript" src="distrib/os/deviceDriver.js"></script>
 		<script type="text/javascript" src="distrib/os/deviceDriverKeyboard.js"></script>
+		<script type="text/javascript" src="distrib/os/deviceDriverDisk.js"></script>
 		<script type="text/javascript" src="distrib/os/queue.js"></script>
 		<script type="text/javascript" src="distrib/os/shell.js"></script>
 		<script type="text/javascript" src="distrib/os/shellCommand.js"></script>
@@ -42,7 +43,7 @@
 		<script type="text/javascript" src="jquery-3.2.1.min.js"></script>
 		<script type="text/javascript" src="bootstrap.js"></script>
 		<!-- Uncomment the line below to enable GLaDOS testing. -->
-		<script type="text/javascript" src="http://alanclasses.github.io/TSOS/test/glados-ip3.js"></script>  
+		<!-- <script type="text/javascript" src="http://alanclasses.github.io/TSOS/test/glados-ip3.js"></script>   -->
 		<link rel="stylesheet" type="text.css" alt="placeholder for rotate" />
 
 	</head>
