Added disk display

--- a/index.html
+++ b/index.html
@@ -171,14 +171,14 @@
 									<table name    ="tableDisk"
 										id      ="tableDisk"
 										bgcolor ="white"
-										style   ="color: black; height: 100px; overflow-y: scroll; display: block; width: 100%; min-width: 800px;"
+										style   ="color: black; height: 250px; overflow: scroll; display: block; width: 100%; min-width: 800px;"
 										class   ="table table-bordered table-striped table-sm">
 									</table>
 								</label>
 							</div>
 							<br>
 						</div>
-						<div class="col-md-5" style="width: 575px; max-width: 575px; min-width: 575px;">
+						<div class="col-md-5" style="width: 575px; max-width: 575px; min-width: 575px; max-height: 300px;">
 							<div id="divConsole" class="panel text-center" style="min-width: 540px; max-width: 540px;">
 								<canvas id="display"
 								width="500px"
