--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 							<br>
 							<div id="divReady" class="panel text-center">
 								<label>
-									<div class="label-header">Ready Queue Display<br><small>Round Robin</small></div>
+									<div class="label-header">Ready Queue Display<br><small id="scheduleName"></small></div>
 									<table name    ="tableReady"
 										id      ="tableReady"
 										bgcolor ="white"
