--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 		<script type="text/javascript" src="distrib/os/memoryManager.js"></script>
 		<script type="text/javascript" src="distrib/os/processManager.js"></script>
 		<script type="text/javascript" src="distrib/os/scheduler.js"></script>
+		<script type="text/javascript" src="distrib/os/swapper.js"></script>
 
 		<!-- Other Routines -->
 		<script type="text/javascript" src="distrib/utils.js"></script>
