--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<script type="text/javascript" src="jquery-3.2.1.min.js"></script>
 		<script type="text/javascript" src="bootstrap.js"></script>
 		<!-- Uncomment the line below to enable GLaDOS testing. -->
-		<!-- <script type="text/javascript" src="http://alanclasses.github.io/TSOS/test/glados-ip3.js"></script>   -->
+		<script type="text/javascript" src="http://alanclasses.github.io/TSOS/test/glados-ip4.js"></script>  
 		<link rel="stylesheet" type="text.css" alt="placeholder for rotate" />
 
 	</head>
