you know, I really hate firefox. but I wanted to make my OS work in firefox so I went back and fixed the problem. hopefully I broke nothing in the process, seems to pass my simpler test cases. works in firefox and chrome now

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 		
 		var isChrome = !!window.chrome && !!window.chrome.webstore;
 		if(!isChrome){
-			alert("Run this OS in Chrome. What is wrong with you? C'mon, dude. Since Chrome actually works, my OS only works in Chrome. Duh.");
-			location.reload();
+			// alert("Run this OS in Chrome. What is wrong with you? C'mon, dude. Since Chrome actually works, my OS only works in Chrome. Duh.");
+			// location.reload();
 		}
 		
 		</script>
