--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 						</div>
 					</div>
 				</div>
+				<br>
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-md-3" style="min-width: 400px;">
@@ -190,7 +191,7 @@
 							</div>
 							<br>
 						</div>
-						<div class="col-md-5" style="width: 575px; max-width: 875px; min-width: 875px; max-height: 300px;">
+						<div class="col-md-5" style="width: 575px; max-width: 875px; min-width: 875px; max-height: 600px;">
 							<div id="divConsole" class="panel text-center" style="min-width: 840px; max-width: 540px;">
 								<canvas id="display"
 								width="800px"
@@ -237,19 +238,42 @@
 								</label>
 							</div>
 							<br>
-							<div id="beautiful" class="panel">
-								<div class="panel-header">Sexy Display</div>
-								<div id="sexy">&nbsp;</div>
-							</div>	
+							<a class="btn btn-primary" data-toggle="collapse" href="#collapseSexy" role="button" aria-expanded="false" aria-controls="collapseSexy">Toggle Sexy Display</a>
+							<div class="collapse multi-collapse" id="collapseSexy">
+								<br>
+								<div id="beautiful" class="panel">
+									<div class="panel-header">Sexy Display</div>
+									<div id="sexy">&nbsp;</div>
+								</div>	
+							</div>
+						</div>
+					</div>
+					<br>
+					<div class="row">
+						<div class="col-md-3">
+							<!-- <div id="divDisk" class="panel text-center">
+								<label class="text-center">
+									<div class="label-header">Disk</div>
+									<table name    ="tableDisk"
+										id      ="tableDisk"
+										bgcolor ="white"
+										style   ="color: black; height: 250px; overflow: scroll; display: block; width: 100%; min-width: 800px;"
+										class   ="table table-bordered table-striped table-sm">
+									</table>
+								</label>
+							</div> -->
+						</div>
+						<div class="col-md-5" style="width: 575px; max-width: 875px; min-width: 875px;">
+						</div>
+						<div class="col-md-3">
 						</div>
 					</div>
 				</div>
 				<p class="footerText" style="clear:both;">
 					<br>
-					Copyright &copy; 2008 - 2016 No Rights Reserved.
+					Kai Wong
 					<br>
-					Reproduction is inhibited without the express written consent of
-					Ted Codd, Stevie Ray Vaughan, and Ian Fleming.
+					Code Generator: https://github.com/Holayn/KaiCompiler
 				</p>
 			</div>
 		</div>
