added link to my compiler

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 							<br>
 							<div id="divUserProgramInput" class="panel text-center">
 								<label>
-									<div class="label-header">User Program Input</div>
+									<div class="label-header">User Program Input<br><small><a href="https://github.com/Holayn/KaiCompiler" target="_blank">Code Gen</a></small></div>
 									<textarea name="taProgramInput"
 									id  ="taProgramInput"
 									rows="8"
