--- a/indexold.html
+++ b/indexold.html
@@ -120,9 +120,9 @@
 					</div>
 				</div>
 				<br>
-				<div class="container-fluid toprow">
+				<div class="container-fluid">
 					<div class="row">
-						<div class="col-md-3" style="max-width: 350px;">
+						<div class="col-md-3" style="min-width: 400px;">
 							<div id="divCPU" class="panel text-center">
 								<label>
 									<div class="label-header">CPU</div>
@@ -191,10 +191,10 @@
 							</div>
 							<br>
 						</div>
-						<div class="col-md-5" style="width: 575px; max-width: 560px; min-width: 580px; max-height: 600px;">
-							<div id="divConsole" class="panel text-center" style="min-width: 565px; max-width: 565px;">
+						<div class="col-md-5" style="width: 575px; max-width: 875px; min-width: 875px; max-height: 600px;">
+							<div id="divConsole" class="panel text-center" style="min-width: 840px; max-width: 540px;">
 								<canvas id="display"
-								width="550px"
+								width="800px"
 								height="500px"
 								tabindex="3"
 								style="margin-top:25px; margin-bottom:25px;">
