o god wat am ilooking at

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 		<!--<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">-->
 		<meta name="author"             content="Alan G. Labouseur" />
-		<link rel="stylesheet" href="tsos.1.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="tsos.css" type="text/css" media="screen" />
 		<!--Import Google Icon Font-->
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:700' rel='stylesheet' type='text/css'>
