fixed up footer

--- a/index.html
+++ b/index.html
@@ -252,15 +252,9 @@
 			<div class="container">
 				<div class="row">
 				<div class="col l6 s12">
-					<h5 class="white-text">An Operating System by Kai Wong</h5>
+					<h6 class="white-text">An Operating System by Kai Wong</h6>
 					<!-- <h5 class="white-text">Footer Content</h5> -->
 					<!-- <p class="grey-text text-lighten-4"></p> -->
-				</div>
-				<div class="col l4 offset-l2 s12">
-					<h5 class="white-text">Links</h5>
-					<ul>
-						<a class="white-text" target="_blank" href="http://labouseur.com/courses/os/">Course Site</a>
-					</ul>
 				</div>
 				</div>
 			</div>
@@ -268,6 +262,8 @@
 				<div class="container">
 				© 2018 Kai Wong & Alan Labouseur
 				<a class="grey-text text-lighten-4 right" target="_blank" href="https://github.com/Holayn">GitHub</a>
+				<a class="grey-text text-lighten-4 right">&nbsp; | &nbsp;</a>
+				<a class="white-text right" target="_blank" href="http://labouseur.com/courses/os/">Course Site</a>
 				</div>
 			</div>
 		</footer>
