i have no idea what's going on anymore :(

--- a/index.html
+++ b/index.html
@@ -94,10 +94,11 @@
 						<button type="button"
 						id = "btnSingleStep"
 						name="btnSingleStep"
-						class="btn-small topbarbutton waves-effect waves-light blue"
+						class="btn-small topbarbutton waves-effect waves-light"
 						disabled="disabled"
 						value="Single Step Mode"
 						tabindex="2"
+						style="background-color: rgb(0, 123, 255)"
 						onclick="TSOS.Control.hostBtnSingleStep_click(this);">Single Step Mode</button>
 						<button type="button"
 						id = "btnNextStep"
