cleaning up code

--- a/index.html
+++ b/index.html
@@ -110,13 +110,9 @@
 						onclick="TSOS.Control.hostBtnNextStep_click(this);">></button>
 					</div>
 					<div class="col s6">
-						<div class="card horizontal">
-							<div class="card-image">
-							</div>
-							<div class="card-stacked">
+						<div class="card horizontal taskbar">
 							<div class="card-content" id="taskBar">
 								<h6>Offline</h6>
-							</div>
 							</div>
 						</div>
 					</div>
